Split the two sub-exercises into two notebooks, and a few updates

--- a/tau_short_exercise_2.ipynb
+++ b/tau_short_exercise_2.ipynb
@@ -7,12 +7,12 @@
     "# Short tau exercise: Part 2\n",
     "\n",
     "Learning objectives:\n",
-    "* the reconstruction of hadronic tau decays in different decay modes\n",
-    "* __discrimination of hadronic tau decys against jets, electrons, and muons.__\n",
+    "* the reconstruction of hadronic tau decays in different decay modes (in part 1)\n",
+    "* __discrimination of hadronic tau decys against jets, electrons, and muons.__ (this part 2)\n",
     "\n",
     "Additional material:\n",
     "* TAU-16-003: Latest paper about tau reconstruction http://cms-results.web.cern.ch/cms-results/public-results/publications/TAU-16-003/index.html\n",
-    "* DeepTau: Algorithm based on neural networks to discriminate taus against jets, muons, and electrons https://cds.cern.ch/record/2694158"
+    "* __DeepTau: Algorithm based on neural networks to discriminate taus against jets, muons, and electrons https://cds.cern.ch/record/2694158__"
    ]
   },
   {
@@ -55,8 +55,9 @@
    },
    "outputs": [],
    "source": [
-    "tau_sample = '/Users/jan/cernbox/public/TauExercise/ztt_10_6_14.root'\n",
-    "jet_sample = '/Users/jan/cernbox/public/TauExercise/qcd_10_6_14.root'\n",
+    "base_dir = '/eos/user/s/steggema/public/TauExercise/'\n",
+    "tau_sample = f'{base_dir}/ztt_10_6_14.root'\n",
+    "jet_sample = f'{base_dir}/qcd_10_6_14.root'\n",
     "tau_file = ROOT.TFile.Open(tau_sample)\n",
     "tau_tree = tau_file.Get('per_tau')\n",
     "jet_file = ROOT.TFile.Open(jet_sample)\n",
