Update for comments

--- a/tau_short_exercise_1.ipynb
+++ b/tau_short_exercise_1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Learning objectives:\n",
     "* __the reconstruction of hadronic tau decays in different decay modes__ (this part)\n",
-    "* discrimination of hadronic tau decys against jets, electrons, and muons. (part 2)\n",
+    "* discrimination of hadronic tau decays against jets, electrons, and muons. (part 2)\n",
     "\n",
     "Additional material:\n",
     "* __TAU-16-003: Latest paper about tau reconstruction http://cms-results.web.cern.ch/cms-results/public-results/publications/TAU-16-003/index.html__\n",
@@ -31,14 +31,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following file contains reconstructed hadronic taus matched to true hadronic tau decays, which can hence be used to study tau reconstruction.\n",
+    "The ROOT files used below are created from simulated events in the CMS detector. They contain generated hadronic tau decays or other generated particles and information about spatially matched reconstructed hadronic tau decays. This matching allows us to use the content to study the efficiency of the tau reconstruction.\n",
     "\n",
     "* The files were preprocessed using the tau validation tools here https://github.com/cms-tau-pog/TauReleaseValidation\n",
-    "* We extract the contained TTree \"per_tau\" that contains one entry per generated tau. The branches for reconstructed taus This allows us to study which fraction of taus was successfully reconstructed.\n",
+    "* We extract the contained TTree \"per_tau\" that contains one entry per generated tau. The branches for reconstructed taus are only filled with values different from `-999` if a reconstructed hadronic tau was found. This way of storing the information allows us to study which fraction of taus was successfully reconstructed.\n",
     "* Reconstructed taus have `pt > 18 GeV` and `|eta| < 2.3`\n",
     "* Generated taus have `pt > 10 GeV` and `|eta| < 2.3`\n",
     "\n",
-    "Given that our reconstruction targets hadronics taus with `pt > 20 GeV`, we usually restrict to this range. \n",
+    "Given that our reconstruction targets hadronic taus with `pt > 20 GeV`, we usually restrict to this range. \n",
     "\n",
     "*Note: Many analyses actually apply tighter cuts, e.g. `pt > 30 GeV`, and it will be interesting to check at each stage in this notebook how things change when increasing the pT cut even if you're not explicitly asked to do so* "
    ]
@@ -50,17 +50,17 @@
    "outputs": [],
    "source": [
     "base_dir = '/eos/user/s/steggema/public/TauExercise/'\n",
-    "base_dir = '/Users/jan/cernbox/public/TauExercise'\n",
     "tau_sample = f'{base_dir}/ztt_10_6_14.root'\n",
+    "tau_sample = f'{base_dir}/dy_nanoaod_v6_gen_tuple.root'\n",
     "tau_file = ROOT.TFile.Open(tau_sample)\n",
-    "tau_tree = tau_file.Get('per_tau')"
+    "tau_tree = tau_file.Get('tree')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To understand better which variables are contained in the tree and how they are distributed, it can be investigated in this notebook, or by other means (e.g. with a TBrowser).\n",
+    "In this notebook, one can investigate which variables are contained in the tree and how they are distributed. One can also investigate this by other means such as with a TBrowser.\n",
     "\n",
     "*If you feel adventurous, it can be an interesting exercise to use the first few lines of code below to write a general tool that makes plots of all variables in a TTree, making some assumptions about what \"undefined\" means and cutting out this part of the plot*"
    ]
@@ -98,15 +98,15 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How do taus actually decay? Here's a table from the TAU-16-003 paper linked above that links the different tau decay modes together with their branching fractions and whether the decay proceeds via an intermediate resonance:\n",
+    "How do taus actually decay? Here's a table from the TAU-16-003 paper linked above that associates the different tau decay modes together with their branching fractions and whether the decay proceeds via an intermediate resonance:\n",
     "\n",
     "![Tau decays](tau_decays.png)\n",
     "\n",
-    "In the CMS tau reconstruction, we are bothered with reconstructing hadronic tau decays only since decays to electrons/muons + neutrinos are covered by different groups and experimentally very differnt.\n",
+    "Since decays of tau leptons to electrons or muons and neutrinos are experimentally very different with respect to decays to hadrons and a neutrino, they are covered by different physics object groups.\n",
+    "In the CMS tau reconstruction, we focus only on reconstructing hadronic tau decays.\n",
     "\n",
     "The CMS tau reconstruction initially focussed on three main decay modes:\n",
     "* One-prong (without pi0) - 1st line in the table above under hadronic decays (dm: 0)\n",
@@ -119,8 +119,8 @@
     "Nowadays, we also look at an additional decay mode:\n",
     "* Three-prong plus pi0 - 5th line (dm: 11)\n",
     "Furthermore, we also try to reconstruct taus that have a 3-prong decay on generator level (dms 10, 11) but where one charged hadron is not reconstructed. These new reconstructed decay modes are sometimes called \"2-prong modes\":\n",
-    "* 3-prong with missing charged hadron and no pi0 (reco dm:5)\n",
-    "* 3-prong with missing charged hadron and pi0 (reco dm:6)\n",
+    "* 3-prong with missing charged hadron and no pi0 (reco dm: 5)\n",
+    "* 3-prong with missing charged hadron and pi0 (reco dm: 6)\n",
     "\n",
     "There is a flag `tau_decayModeFindingNewDMs` that checks if the tau was reconstructed in any of the decay modes. It is always true for reconstructed taus in the considered trees (and in MiniAOD), so we do not explicitly check it in the examples below.\n",
     "\n",
@@ -141,14 +141,14 @@
    "outputs": [],
    "source": [
     "# We're interested in taus well within the tracker acceptance and with minimum pT\n",
-    "base_sel = 'tau_genpt>20. && abs(tau_geneta)<2.3'\n",
+    "base_sel = 'tau_gen_pt>20. && abs(tau_gen_eta)<2.3'\n",
     "\n",
     "n_all = tau_tree.Draw('1', base_sel)\n",
     "n_pass = tau_tree.Draw('1', 'tau_pt>20 &&' + base_sel)\n",
     "print(n_all, 'generated taus of which', n_pass, 'are reconstructed')\n",
     "print(f'Efficiency: {n_pass/n_all:.3f}')\n",
-    "n_pass= tau_tree.Draw('1', 'tau_decayModeFinding && tau_pt>20 &&' + base_sel)\n",
-    "print(n_pass_and_dm, 'also pass the \"old\" decay mode finding')\n",
+    "n_pass = tau_tree.Draw('1', 'tau_idDecayMode && tau_pt>20 &&' + base_sel)\n",
+    "print(n_pass, 'also pass the \"old\" decay mode finding')\n",
     "print(f'Efficiency: {n_pass/n_all:.3f}')"
    ]
   },
@@ -181,7 +181,7 @@
    "outputs": [],
    "source": [
     "# Select 1-prong taus without pi0s, which has decay mode 0 according to the formula above\n",
-    "base_sel = 'tau_genpt>20. && abs(tau_geneta)<2.3 && tau_gendm==0'\n",
+    "base_sel = 'tau_gen_pt>20. && abs(tau_gen_eta)<2.3 && tau_gen_decayMode==0'\n",
     "n_all = tau_tree.Draw('1', base_sel)\n",
     "n_pass = tau_tree.Draw('1', 'tau_pt>20 &&' + base_sel)\n",
     "print(f'Efficiency: {n_pass/n_all:.3f}')"
@@ -245,11 +245,11 @@
    "source": [
     "# We use a minimum generated pT of 30. so we do not run into threshold effects \n",
     "# given we only have reconstructed taus with pT > 18 GeV in the trees\n",
-    "base_sel = 'tau_genpt>30. && abs(tau_geneta)<2.3'\n",
+    "base_sel = 'tau_gen_pt>30. && abs(tau_gen_eta)<2.3'\n",
     "h_res = ROOT.TH1F('h_res', '', 30, -20., 10.)\n",
     "h_res.GetXaxis().SetTitle(\"#tau_{h} reco - gen p_{T} (GeV)\")\n",
     "h_res.GetYaxis().SetTitle(\"N\")\n",
-    "tau_tree.Project('h_res', 'tau_pt - tau_genpt', base_sel)\n",
+    "tau_tree.Project('h_res', 'tau_pt - tau_gen_pt', base_sel)\n",
     "canvas = ROOT.TCanvas()\n",
     "h_res.Draw()\n",
     "canvas.Draw()"
