Fix path for zmm and zee rootfiles

--- a/tau_short_exercise_2.ipynb
+++ b/tau_short_exercise_2.ipynb
@@ -290,8 +290,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# muo_sample = '/Users/jan/cernbox/public/TauExercise/zmm_10_6_14.root'\n",
-    "# ele_sample = '/Users/jan/cernbox/public/TauExercise/zee_10_6_14.root'\n",
+    "# muo_sample = f'{base_dir}/zmm_10_6_14.root'\n",
+    "# ele_sample = f'{base_dir}/zee_10_6_14.root'\n",
     "# muo_file = ROOT.TFile.Open(muo_sample)\n",
     "# muo_tree = muo_file.Get('per_tau')\n",
     "# ele_file = ROOT.TFile.Open(ele_sample)\n",
